; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/stlport/src/c_locale_glibc/extr_c_locale_glibc2.c__WLocale_full_monthname.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/stlport/src/c_locale_glibc/extr_c_locale_glibc2.c__WLocale_full_monthname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._Locale_time = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @_WLocale_full_monthname(%struct._Locale_time* %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca %struct._Locale_time*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store %struct._Locale_time* %0, %struct._Locale_time** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct._Locale_time*, %struct._Locale_time** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @_Locale_full_monthname(%struct._Locale_time* %9, i32 %10)
  %12 = load i32*, i32** %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = call i32* @_ToWChar(i32 %11, i32* %12, i64 %13)
  ret i32* %14
}

declare dso_local i32* @_ToWChar(i32, i32*, i64) #1

declare dso_local i32 @_Locale_full_monthname(%struct._Locale_time*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
